@@ -1,0 +1,2 @@
+./genRootDecayChain Kspimumu.dec Kspimumu.root "K_S0" 1000000
+
